# skills-collection

./: .gitignore  README.md  SKILLS.md  analysis.json  analysis.py  backfill_history.py  commits.json  disabled.json  generate_dib_charts.py  generate_readme.py  history.json  inventory.json  repo-commits.json  repos-meta.json  skills-list.json  stats.json
skills/AgriciDaniel--claude-blog/: .gitignore  .mcp.example.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  TODO.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
skills/AgriciDaniel--claude-blog/.claude-plugin/: marketplace.json  plugin.json
skills/AgriciDaniel--claude-blog/.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
skills/AgriciDaniel--claude-blog/.github/ISSUE_TEMPLATE/: config.yml
skills/AgriciDaniel--claude-blog/agents/: blog-researcher.md  blog-reviewer.md  blog-translator.md  blog-writer.md
skills/AgriciDaniel--claude-blog/branding/: AGENT-PROMPT.md  README.md  final.html
skills/AgriciDaniel--claude-blog/docs/: ARCHITECTURE.md  COMMANDS.md  DEMO.md  INSTALLATION.md  MCP-INTEGRATION.md  PUBLISHING.md  TEMPLATES.md  TROUBLESHOOTING.md
skills/AgriciDaniel--claude-blog/scripts/: generate_hero.py
skills/AgriciDaniel--claude-blog/skills/blog/: SKILL.md
skills/AgriciDaniel--claude-blog/tests/: test_blog_delivery_contract.py  test_cognitive_load.py  test_command_coherence.py  test_discourse_research.py  test_generate_hero_ssrf.py  test_installer_sync.py  test_iteration_counter.py  test_lint_prose.py  test_load_untrusted_root.py  test_preflight_http_head_no_redirect.py  test_security_guardrails.py  test_security_v1_8_0.py  test_version_coherence.py
skills/HeshamFS--materials-simulation-skills/: .editorconfig  .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  skills_index.json  skills_index.schema.json
skills/HeshamFS--materials-simulation-skills/.claude-plugin/: marketplace.json
skills/HeshamFS--materials-simulation-skills/.github/: PULL_REQUEST_TEMPLATE.md
skills/HeshamFS--materials-simulation-skills/docs/: EVALUATION_METHODOLOGY.md  EVAL_HARNESS.md  INSTALL.md  PROTOCOL.md  SECURITY.md  SKILLS.md
skills/HeshamFS--materials-simulation-skills/materials_simulation_skills/: __init__.py  cli.py  eval_runner.py  skill_index.py  skill_utils.py
skills/HeshamFS--materials-simulation-skills/skills/: __init__.py
skills/HeshamFS--materials-simulation-skills/tools/: build_index.py  run_skill_evals.py  update_metrics.py  validate_skills.py
skills/K-Dense-AI--claude-scientific-writer/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TESTING_INSTRUCTIONS.md  example_api_usage.py  pyproject.toml  test-marketplace-example.json
skills/K-Dense-AI--claude-scientific-writer/.claude-plugin/: marketplace.json
skills/K-Dense-AI--claude-scientific-writer/docs/: API.md  FEATURES.md  README.md  RELEASING.md
skills/K-Dense-AI--claude-scientific-writer/scientific_writer/: __init__.py  api.py  cli.py  core.py  models.py  utils.py
skills/K-Dense-AI--claude-scientific-writer/scripts/: README.md  bump_version.py  publish.py  verify_package.py
skills/K-Dense-AI--claude-scientific-writer/templates/: CLAUDE.scientific-writer.md
skills/daymade--claude-code-skills/wechat-article-scraper/: .dockerignore  Dockerfile  Round65_Analysis.md  SKILL.md  docker-compose.yml  docker-entrypoint.sh  mcp-config.example.json  pyproject.toml
skills/glebis--claude-skills/skill-studio/: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml  requirements.txt
skills/glebis--claude-skills/telegram-telethon/: .gitignore  SKILL.md  pyproject.toml
skills/jananthan30--Resume-Builder/: .codex.mcp.json  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  JOB_FIT_SCORER_PLAN.md  LICENSE  README.md  SUPPLEMENTAL_EXPERIENCE.md  ats_scorer.py  batch_job_search.py  config.example.json  docx_generator.py  evidence_audit.py  generate_job_guide.py  hr_scorer.py  jd_fetcher.py  job_discovery.py  job_fit_scorer.py  llm_scorer.py  mcp_scorer.py  orchestration_state.py  pii_redactor.py  pyproject.toml  requirements-dev.txt  requirements-plugin.txt  requirements.txt  restart_scorer.ps1  resume_builder.py  scorer_server.py  test_domain_coverage.py  test_job_search.py  text_extractor.py  tracker_utils.py
skills/jananthan30--Resume-Builder/.claude-plugin/: marketplace.json  plugin.json
skills/jananthan30--Resume-Builder/.codex-plugin/: plugin.json
skills/jananthan30--Resume-Builder/benchmarks/: embedding_evaluation.py
skills/jananthan30--Resume-Builder/commands/: batch-resume.md  cover-letter.md  find-jobs.md  job-fit.md  resume.md  setup.md  tailor-resume.md  writing-coach.md
skills/jananthan30--Resume-Builder/data/: acronyms.json  action_verbs.json  company_prestige.json  keywords_clinical.json  keywords_consulting.json  keywords_finance.json  keywords_general.json  keywords_healthcare.json  keywords_technology.json  onet_skills.json  skill_taxonomy.json  university_rankings.json
skills/jananthan30--Resume-Builder/hooks/: hooks.json
skills/jananthan30--Resume-Builder/taxonomy/: onet_loader.py
skills/robertguss--claude-skills/: .doc-state.json  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  build.py  justfile  mkdocs.yml  pyproject.toml
skills/robertguss--claude-skills/.claude/: settings.local.json
skills/robertguss--claude-skills/docs/: index.md
skills/robertguss--claude-skills/products/: brainstorm-README.md  brainstorm.yaml  non-fiction-book-factory-README.md  non-fiction-book-factory.yaml  writing-README.md  writing.yaml
skills/robertguss--claude-skills/templates/: CLAUDE-MD-GUIDE.md  CLAUDE-MD-template.md  CLAUDE_DNA.md  CORRECTION-template.md  HUMAN-MD-template.md  INTERACTION-PATTERNS.md  PROMPT-GUIDE.md  README.md  SESSION-HANDOFF-template.md  SKILL-MD-template.md  compaction-strategy.md
(+28112 files in other folders)
