[project]
name = "scientific-writer"
version = "2.15.1"
description = "Deep research and writing tool - combines AI-driven deep research with well-formatted written outputs. Generates publication-ready scientific documents with verified citations."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pymupdf>=1.24.0",
]

# System Dependencies (must be installed separately):
# 
# LaTeX Distribution (required for PDF compilation):
#   - macOS: MacTeX (https://www.tug.org/mactex/) or BasicTeX
#     Install: brew install --cask mactex-no-gui
#   - Linux: TeX Live
#     Install: sudo apt-get install texlive-full (Ubuntu/Debian)
#              sudo dnf install texlive-scheme-full (Fedora)
#   - Windows: MiKTeX (https://miktex.org/) or TeX Live
#
# Required LaTeX packages (usually included in full distributions):
#   - pdflatex, bibtex, latexmk
#   - Common packages: amsmath, graphicx, hyperref, natbib, geometry
#
# PDF to Image Conversion:
#   PyMuPDF is included as a dependency - no external software needed!
#   PDF to image conversion works out of the box.
#
# Optional but recommended:
#   - Ghostscript (for PDF manipulation)
#   - ImageMagick (for image processing)

[project.scripts]
scientific-writer = "scientific_writer.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scientific_writer"]

[tool.uv]
dev-dependencies = []


[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git,.gitignore,.gitattributes,*.pdf,*.svg,*.css,*.xsd'
check-hidden = true
# Ignore camelCase/PascalCase identifiers, and word fragments from bold formatting
# (**S**pecific, \textbf{F}requency, etc.)
ignore-regex = '\b[a-z]+[A-Z]\w*\b|\b[A-Z][a-z]+[A-Z]\w*\b|\*\*.\*\*\w+|\\textbf\{.\}\w+'
# Domain-specific terms:
#  theses - plural of thesis (BibTeX entry type)
#  infarction - medical term (myocardial infarction)
#  ser - XML series element
#  pres - presentation abbreviation
#  commun - as in "Nature Communications" journal
#  stard - STARD reporting guideline (Standards for Reporting Diagnostic Accuracy)
#  ehr - Electronic Health Record
#  anc - Absolute Neutrophil Count
#  ot - Occupational Therapy
#  som - Serviceable Obtainable Market
#  caf/cafs - Cancer-Associated Fibroblasts
#  promis - PROMIS patient-reported outcome measures
#  slac - SLAC National Accelerator Laboratory
#  als - Amyotrophic Lateral Sclerosis / Advanced Light Source
#  abd - abbreviation for abdomen/abdominal
#  rouge - ROUGE metric (NLP evaluation)
#  nd - shorthand for 2nd
#  reacher - Functional Reach test (rehabilitation)
#  fallow - Gutenberg diagram layout term (fallow area)
#  trough - Gartner Hype Cycle term (Trough of Disillusionment)
#  childs - surname
#  recuse - legitimate word (to recuse oneself)
#  inh - medical abbreviation (inhalation)
#  ois - Optimal Information Size (statistics)
#  re-use - valid hyphenation
#  edn - abbreviation for "edition" (Nature citation style: "10th edn")
#  bu - Business Unit abbreviation
#  vermillion - valid alternate spelling of vermilion
ignore-words-list = 'theses,infarction,ser,pres,commun,stard,ehr,anc,ot,som,caf,cafs,promis,slac,als,abd,rouge,nd,reacher,fallow,trough,childs,recuse,inh,ois,re-use,edn,bu,vermillion'
