[project]
name = "route-researcher-tools"
version = "0.1.0"
description = "Data gathering tools for North American mountain route research"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "astral>=3.2",
    "cloudscraper>=1.2.71",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
