[project]
name = "route-researcher-tools"
version = "0.1.0"
description = "Data gathering tools for North American mountain route research"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "astral>=3.2",
    "patchright>=1.49.0",
]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
