[project]
name = "email-agent"
version = "0.1.0"
description = "An automated email support agent that uses AI to respond to customer support emails"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.2.1",
    "imaplib2==3.6",
    "python-decouple==3.8",
    "openai-agents==0.5.0",
    "stripe-agent-toolkit>=0.6.2",
    "stripe>=13.2.0",
    "urllib3<3",
    "markdown==3.8.1"
]

[tool.hatch.metadata]
allow-direct-references = true
